--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "eslint": "8.19.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "12.2.2",
+    "eslint-plugin-import": "^2.26.0",
     "postcss": "^8.4.14",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0",
     "tailwindcss": "^3.1.6"
   }
 }
